Size of div for overflowing audio format fixed & changed the name of the youtube downloader

--- a/static/style.css
+++ b/static/style.css
@@ -256,6 +256,18 @@ h1{
     border-radius: 55px;
 }
 
+.videoarea1{
+    margin-left: 45px;
+    background-color:black;
+    height: 51.2vh;
+    width:45vw;
+    padding: 45px;
+    border: 4px solid white;
+    box-shadow: 0 0 6px 5px white;
+    
+    border-radius: 55px;
+}
+
 .vcard{
     border: 5px solid white;
     background-color: black;
